--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     <h1>Git Github Basico</h1>
+
+    <p>
+        git init para inicializar el repositorio git <br>
+        git status para ver que no esta agregado <br>
+        git add . para agregar los no agregados <br>
+        git commit para confirmar cambios <br>
+    </p>
 </body>
 </html>
