--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <p>
         git init para inicializar el repositorio git <br>
         git status para ver que no esta agregado <br>
+        ls -h para ver carpetas ocultas <br>
+        cd para volver atras <br>
         git add . para agregar los no agregados <br>
-        git commit para confirmar cambios <br>
+        git commit -m para confirmar cambios <br>
     </p>
 </body>
 </html>
