--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         git status para ver que no esta agregado <br>
         ls -h para ver carpetas ocultas <br>
         cd para volver atras <br>
+        git log para ver los cambios <br>
         git add . para agregar los no agregados <br>
         git commit -m para confirmar cambios <br>
     </p>
