--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
         git add . para agregar los no agregados <br>
         git commit -m para confirmar cambios <br>
     </p>
+    <h2>Github en la terminal</h2>
+    <p>
+        git remote add origin -url del repositorio- <br>
+        git branch -M Master <br>
+        git push -u origin Master para guardar los cambios <br>
+    </p>
 </body>
 </html>
