--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
         git branch -M Master <br>
         git push -u origin Master para guardar los cambios <br>
     </p>
+
+    <h2>Crear otra rama en hithub</h2>
+
+    <p>git checkout -b -el nombre de la rama que quieras- </p>
 </body>
 </html>
