cambio a otra rama

--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
     <h2>Crear otra rama en hithub</h2>
 
     <p>git checkout -b -el nombre de la rama que quieras- </p>
+    <h1>test</h1>
 </body>
 </html>
