--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
     <h2>Crear otra rama en hithub</h2>
 
-    <p>git checkout -b -el nombre de la rama que quieras- </p>
+    <p>git checkout -b -el nombre de la rama que quieras- <br>
+    git checkout master o desarrollo para ver la rama
+    </p>
     <h1>test</h1>
 </body>
 </html>
