--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <h2>Crear otra rama en hithub</h2>
 
     <p>git checkout -b -el nombre de la rama que quieras- <br>
-    git checkout master o desarrollo para ver la rama
+    git checkout master o desarrollo para ver la rama <br>
+    git merge (ubicarce en la rama a la que le querramos pasar el codigo) -nombre de la rama- para agregar el codigo al lugar en donde estamos situados <br>
     </p>
     <h1>test</h1>
 </body>
