--- a/index.html
+++ b/index.html
@@ -28,10 +28,18 @@
 
     <h2>Crear otra rama en hithub</h2>
 
-    <p>git checkout -b -el nombre de la rama que quieras- <br>
-    git checkout master o desarrollo para ver la rama <br>
-    git merge (ubicarce en la rama a la que le querramos pasar el codigo) -nombre de la rama- para agregar el codigo al lugar en donde estamos situados <br>
+    <p>
+        git checkout -b -el nombre de la rama que quieras- <br>
+        git checkout master o desarrollo para ver la rama <br>
     </p>
-    <h1>test</h1>
+
+    <h2> Copiar codigo de una rama a otra</h2>
+    <p>
+        git merge (ubicarce en la rama a la que le querramos pegar el codigo de la otra) -nombre de la rama que vamos a copiar- <br>
+        git diff para ver diferencias en los codigos <br>
+
+    </p>
+    
+    
 </body>
 </html>
