--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>
        <b>git remote add origin -url del repositorio-</b> para subir al repositorio <br>
        <b> git branch -M -nombre de la rama- </b> <br>
-       <b></b> git push -u origin -nombre de la rama- </b> para crear la rama o guardar cambios <br>
+       <b> git push -u origin -nombre de la rama- </b> para crear la rama o guardar cambios <br>
     </p>
 
     <h2>Crear otra rama en hithub</h2>
